[project]
name = "vulnctl"
version = "0.1.0"
description = "Vulnerability control service"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "shellingham>=1.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio~=1.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
vulnctl = "src.cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "."
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
